--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@finsweet/attributes-cmsfilter": "^1.16.2",
+    "@finsweet/attributes-cmssort": "^1.13.3",
     "@finsweet/attributes-linkblockedit": "^1.5.0",
+    "@finsweet/attributes-scrolldisable": "^1.6.2",
     "@finsweet/ts-utils": "^0.40.0",
     "gsap": "^3.12.5",
     "swiper": "^11.0.5"
